# ObjModelParser-OpenGL-

./: .gitignore  CMakeLists.txt  DrawingTest.kdev4
.kdev4/: DrawingTest.kdev4
include/: ObjParser.h
include/hidden/: ObjLoader.h  objloader.h
src/: ObjParser.cpp  main.cpp
src/hidden/: ObjLoader.cpp  main.cpp  objloader.cpp  testGL.cpp  testGL2.cpp
